--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "i": "^0.3.7",
+    "npm": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
