--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=3000
+DATABASE_LOCAL=mongodb://localhost:27017/Pmaintenance
+SECRET_SALT_SESSION=7L4s9yuNR8uL55yb052HnchwNYvNHwxoJWjijdk6bE7hn5wND8
