--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
-    "i": "^0.3.7",
-    "mongoose": "^6.5.2",
-    "npm": "^8.17.0"
+    "mongoose": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
