--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2"
   },
   "devDependencies": {
