--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
     "class-methods-use-this": "off",
     "no-useless-return": "off",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val|err" }]
+    "no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "req|res|next|val|err" }
+    ],
+    "no-restricted-syntax": ["error", "ForInStatement"]
   }
 }
