pagination done but need to fix buges regarding page url

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 DATABASE_LOCAL=mongodb://localhost:27017/Pmaintenance
 SECRET_SALT_SESSION=7L4s9yuNR8uL55yb052HnchwNYvNHwxoJWjijdk6bE7hn5wND8
 SALT_ROUND=12
+LINES_PER_PAGE=2
